--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:theme="@style/Theme.Expoandes">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"/>
+        <activity android:name=".AuthActivity" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
