--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icono_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Expoandes">
+        android:theme="@style/Theme.Expoandes.NoActionBar">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
+
         <activity android:name=".AuthActivity" />
         <activity
             android:name=".SplashScreen"
