La pantalla de perfil ya se ve bien, todas las actividades no tienen constraint layout asi que se ve mejor. En el perfil ya está el botón de agregar, lo que falta es configurar la pantalla de agregar un objeto y poner bonitas a las demás pantallas. Lo de notificaciones aún no se como hacerlo y tampoco lo del chat, la otra semana es para eso.

--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/icono_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Expoandes.NoActionBar">
+        <activity android:name=".AddActivity"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
