--- a/Expoandes/app/build.gradle
+++ b/Expoandes/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    'com.jakewharton:process-phoenix:2.0.0'
+
 }
