Actualización mayor, en la pantalla de inicio ya se ven las cosas que se han prestado y que están en prestamo actualmente. Solo se muestran 5 y lo demás se muestra cuando se le da clic a la vista. Además los colores de la barra de navegación cambiaron para verse un poco mejor.

--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/icono_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Expoandes.NoActionBar">
+        <activity android:name=".PrestamosView"/>
+        <activity android:name=".CosasPropiasView"/>
         <activity android:name=".AddActivity"/>
         <activity
             android:name=".MainActivity"
