--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/icono_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Expoandes.NoActionBar">
+        <activity android:name=".DevolverActivity"/>
         <activity android:name=".InfoConfirmar"/>
         <activity android:name=".PrestamosView"/>
         <activity android:name=".CosasPropiasView"/>
