Actualización mayor, ahora se redirige a whatsapp al momento de dar click en prestar. Además se cambio la distribución del botón de salir para efectos de que se vea mejor. En el fragmento de notificaciones ahora hay una animación con un mensaje que pide esperar a la función, para que no se vea como una pantalla abandonada.

--- a/Expoandes/app/src/main/AndroidManifest.xml
+++ b/Expoandes/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/icono_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Expoandes.NoActionBar">
+        <activity android:name=".ContactActivity"/>
+        <activity android:name=".SignUpActivity"/>
         <activity android:name=".DevolverActivity"/>
         <activity android:name=".InfoConfirmar"/>
         <activity android:name=".PrestamosView"/>
